# ChemicalNomen

./: .gitignore  Cargo.toml  README.md
ChemicalNomenCLI/: Cargo.toml
ChemicalNomenCLI/src/: main.rs
ChemicalNomenCore/: Cargo.toml
ChemicalNomenCore/src/: data.rs  lib.rs
